--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -8,8 +8,9 @@
 @import "./components/order_type";
 @import "./components/header_area";
 @import "./components/order_info_area";
+@import "./components/recent_order_area";
+@import "./components/menu_category_area";
 
 @import "./pages/order_page";
-@import "./components/recent_order_area"
 
 
