메뉴 아이템 영역
multi ellipsis, badge

--- a/assets/scss/components/_menu_category_area.scss
+++ b/assets/scss/components/_menu_category_area.scss
@@ -3,6 +3,7 @@
     top: $header-height;
     margin-top: 10px;
     background-color: #fff;
+    z-index: 5500;
 
     .common-inner {
         border-bottom: 1px solid $booking-color-border144;
