--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -11,6 +11,7 @@
 @import "./components/recent_order_area";
 @import "./components/menu_category_area";
 @import "./components/menu_list_area";
+@import "./components/menu_item";
 
 @import "./pages/order_page";
 
