--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -7,3 +7,5 @@ $place-header-height: 48px;
 $place-tab-height: 46px;
 
 $header-height: $place-header-height + $place-tab-height;
+
+$order-box-area-height: 70px;
