--- a/assets/scss/pages/_order_page.scss
+++ b/assets/scss/pages/_order_page.scss
@@ -1,6 +1,7 @@
 .container {
     padding-top: $place-header-height + $place-tab-height;
     background-color: $booking-color-border151;
+    padding-bottom: $order-box-area-height;
 }
 
 .common-inner {
