--- a/assets/scss/components/menu/_recent_order_area.scss
+++ b/assets/scss/components/menu/_recent_order_area.scss
@@ -29,15 +29,18 @@
 
     .recent-menu-item {
         box-sizing: content-box;
+        position: relative;
         padding-left: 16px;
         width: 80px;
         text-align: center;
+        padding-right: 16px;
         &.is-ordered {
-            padding-right: 16px;
+            padding-left: 16px;
             border-right: 1px solid $booking-color-bg102;
-        }
-        &:last-child {
-            padding-right: $m-padding;
+
+            & +.recent-menu-item {
+                padding-left: 16px;
+            }
         }
     }
 
@@ -71,8 +74,8 @@
 
     .badge-cart {
         position: absolute;
-        bottom: 0;
-        right: 0;
+        top: 50px;
+        right: 16px;
         padding: 6px;
         border: 1px solid $booking-color-border150;
         border-radius: 100%;
