--- a/assets/scss/components/detail/_menu_detail_area.scss
+++ b/assets/scss/components/detail/_menu_detail_area.scss
@@ -33,4 +33,54 @@
             opacity: 0.15;
         }
     }
+
+    // 메뉴 정보 영역
+    .menu-info-area {
+        padding: 0 $m-padding 20px;
+
+        .common-inner {
+            padding: 18px;
+            margin-top: -20px;
+            background-color: #fff;
+            position: relative;
+            z-index: 1;
+            box-shadow: 0 0 4px 3px rgba(0,0,0,0.04);
+            border-radius: 5px;
+        }
+
+        .menu-info-group {
+            margin-top: 5px;
+
+            .menu-price {
+                line-height: 24px;
+                font-size: 19px;
+                font-weight: 700;
+                color: $point-color;
+            }
+
+            .menu-grade::before,
+            .menu-number-of-order::before {
+                content: '';
+                display: inline-block;
+                width: 1px;
+                height: 12px;
+                margin: 0 8px;
+                background-color: $booking-color-bg204;
+                transform: translateY(1px);
+            }
+
+            .menu-grade,
+            .menu-number-of-order {
+                line-height: 24px;
+            }
+        }
+
+        .menu-desc {
+            margin-top: 12px;
+            font-size: 15px;
+            line-height: 22px;
+            color: $booking-color-text6;
+        }
+
+    }
 }
