--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,6 +202,17 @@ textarea::-webkit-outer-spin-button {
   display: none;
 }
 
+.amount-select {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 35px;
+  background-color: red;
+}
+
 .header-area {
   position: fixed;
   top: 0;
@@ -491,6 +502,203 @@ textarea::-webkit-outer-spin-button {
   color: #333;
 }
 
+.menu-detail-area {
+  background-color: #fff;
+}
+
+.menu-detail-area .menu-img {
+  position: relative;
+  height: 300px;
+  background-color: #f8fafb;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.03);
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.03);
+}
+
+.menu-detail-area .menu-img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 130px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#000), to(rgba(0, 0, 0, 0)));
+  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0));
+  z-index: 1;
+  opacity: 0.2;
+}
+
+.menu-detail-area .menu-img::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 65px;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#000), to(rgba(0, 0, 0, 0)));
+  background-image: linear-gradient(to top, #000, rgba(0, 0, 0, 0));
+  z-index: 1;
+  opacity: 0.15;
+}
+
+.menu-detail-area .menu-info-area {
+  padding: 0 18px 20px;
+  margin-top: -20px;
+}
+
+.menu-detail-area .menu-info-area .common-inner {
+  position: relative;
+  padding: 18px;
+  border-radius: 5px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.04);
+          box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.04);
+  z-index: 1;
+}
+
+.menu-detail-area .menu-info-area .menu-info-group {
+  margin-top: 5px;
+}
+
+.menu-detail-area .menu-info-area .menu-info-group .menu-price {
+  line-height: 24px;
+  font-size: 19px;
+  font-weight: 700;
+  color: #ff3d3b;
+}
+
+.menu-detail-area .menu-info-area .menu-info-group .menu-grade::before,
+.menu-detail-area .menu-info-area .menu-info-group .menu-number-of-order::before {
+  content: '';
+  display: inline-block;
+  margin: 0 8px;
+  width: 1px;
+  height: 12px;
+  background-color: #ededed;
+  -webkit-transform: translateY(1px);
+          transform: translateY(1px);
+}
+
+.menu-detail-area .menu-info-area .menu-info-group .menu-grade,
+.menu-detail-area .menu-info-area .menu-info-group .menu-number-of-order {
+  line-height: 24px;
+}
+
+.menu-detail-area .menu-info-area .menu-desc {
+  margin-top: 12px;
+  font-size: 15px;
+  line-height: 22px;
+  color: #333;
+}
+
+.menu-detail-area .order-type-area {
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid #f2f2f2;
+}
+
+.menu-detail-area .order-type-area .type-select,
+.menu-detail-area .order-type-area .type-amount {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.menu-detail-area .order-type-area .type-select .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: -0.3px;
+  color: #333;
+}
+
+.menu-detail-area .order-type-area .type-select .ico-n-logo {
+  margin-right: 4px;
+  width: 20px;
+}
+
+.menu-detail-area .order-type-area .type-select .tab-switch-box {
+  margin-top: 0;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.menu-detail-area .order-type-area .type-select .tab-switch {
+  width: 80px;
+  line-height: 37px;
+  font-size: 13px;
+}
+
+.menu-detail-area .order-type-area .type-select .tab-switch.is-active {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border-radius: 3px;
+}
+
+.menu-detail-area .order-type-area .type-select .tab-switch.is-active::after {
+  display: none;
+}
+
+.menu-detail-area .order-type-area .type-select .tab-switch + .tab-switch {
+  position: relative;
+}
+
+.menu-detail-area .order-type-area .type-select .tab-switch + .tab-switch::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 1px;
+  height: 17px;
+  background-color: #e7e7e7;
+}
+
+.menu-detail-area .order-type-area .type-amount {
+  margin-top: 20px;
+}
+
+.menu-detail-area .order-type-area .type-amount .title {
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: -0.3px;
+  color: #333;
+}
+
+.menu-detail-area .order-type-area .btn-order {
+  display: block;
+  margin-top: 20px;
+  padding: 0 16px;
+  width: 100%;
+  line-height: 46px;
+  border-radius: 3px;
+  font-weight: 700;
+  background-color: #01d760;
+  color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.menu-detail-area .order-type-area .btn-order:disabled {
+  background-color: #c9c9c9;
+  color: #fff;
+}
+
 .go-to-top {
   padding: 16px 0 32px;
   background-color: #fff;
@@ -700,74 +908,87 @@ textarea::-webkit-outer-spin-button {
   background-color: #ededed;
 }
 
-.dimmed-layer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-}
-
-.order-type-popup {
+.order-box-area {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
+  height: 70px;
+  border-top: 1px solid #e8e8e8;
+  -webkit-box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.03);
+          box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.03);
   background-color: #fff;
-  padding: 30px 0 40px;
-  text-align: center;
-  z-index: 10000;
-  border-radius: 16px 16px 0px 0px;
+  z-index: 9100;
 }
 
-.order-type-popup .title {
-  font-size: 20px;
-  font-weight: 700;
-  color: #000;
-}
-
-.order-type-popup .type-list {
+.order-box-area .common-inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 32px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 12px 18px;
 }
 
-.order-type-popup .type-item {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.order-type-popup .type-item + .type-item {
-  border-left: 1px solid #f2f2f2;
-}
-
-.order-type-popup .icon {
-  width: 100px;
-  height: auto;
-  color: #03c75a;
-}
-
-.order-type-popup .desc {
-  margin-top: 8px;
+.order-box-area .menu-name {
   font-size: 15px;
-  line-height: 1.5;
-  font-weight: 600;
-  color: #000;
+  color: #333;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.order-type-popup .btn-selection {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 6px 18px;
-  font-size: 16px;
+.order-box-area .menu-price {
+  font-size: 18px;
   font-weight: 700;
-  border-radius: 28px;
-  background-color: #424242;
+  color: #ff3d3b;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.order-box-area .btn-order {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 128px;
+  border-radius: 5px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#01d760), to(#0ad18e));
+  background-image: linear-gradient(to right, #01d760, #0ad18e);
+  font-weight: 700;
+  letter-spacing: -0.3px;
   color: #fff;
+}
+
+.order-box-area .icon {
+  position: relative;
+  margin-left: 6px;
+}
+
+.order-box-area .ico-cart {
+  width: 20px;
+  height: 20px;
+}
+
+.order-box-area .num {
+  position: absolute;
+  top: -5px;
+  right: -4px;
+  width: 16px;
+  height: 16px;
+  background-color: #ff3d3b;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 12px;
+  font-weight: 700;
+  text-align: center;
 }
 
 .order-info-area {
@@ -884,87 +1105,74 @@ textarea::-webkit-outer-spin-button {
   margin-right: 6px;
 }
 
-.order-box-area {
+.dimmed-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+
+.order-type-popup {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 70px;
-  border-top: 1px solid #e8e8e8;
-  -webkit-box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.03);
-          box-shadow: 0 0 6px 4px rgba(0, 0, 0, 0.03);
   background-color: #fff;
-  z-index: 9100;
-}
-
-.order-box-area .common-inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 12px 18px;
-}
-
-.order-box-area .menu-name {
-  font-size: 15px;
-  color: #333;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.order-box-area .menu-price {
-  font-size: 18px;
-  font-weight: 700;
-  color: #ff3d3b;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.order-box-area .btn-order {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 128px;
-  border-radius: 5px;
-  background-image: -webkit-gradient(linear, left top, right top, from(#01d760), to(#0ad18e));
-  background-image: linear-gradient(to right, #01d760, #0ad18e);
-  font-weight: 700;
-  letter-spacing: -0.3px;
-  color: #fff;
-}
-
-.order-box-area .icon {
-  position: relative;
-  margin-left: 6px;
-}
-
-.order-box-area .ico-cart {
-  width: 20px;
-  height: 20px;
-}
-
-.order-box-area .num {
-  position: absolute;
-  top: -5px;
-  right: -4px;
-  width: 16px;
-  height: 16px;
-  background-color: #ff3d3b;
-  color: #fff;
-  border-radius: 50%;
-  font-size: 12px;
-  font-weight: 700;
+  padding: 30px 0 40px;
   text-align: center;
+  z-index: 10000;
+  border-radius: 16px 16px 0px 0px;
+}
+
+.order-type-popup .title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #000;
+}
+
+.order-type-popup .type-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 32px;
+}
+
+.order-type-popup .type-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.order-type-popup .type-item + .type-item {
+  border-left: 1px solid #f2f2f2;
+}
+
+.order-type-popup .icon {
+  width: 100px;
+  height: auto;
+  color: #03c75a;
+}
+
+.order-type-popup .desc {
+  margin-top: 8px;
+  font-size: 15px;
+  line-height: 1.5;
+  font-weight: 600;
+  color: #000;
+}
+
+.order-type-popup .btn-selection {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 6px 18px;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 28px;
+  background-color: #424242;
+  color: #fff;
 }
 
 .recent-order-area {
@@ -1090,203 +1298,6 @@ textarea::-webkit-outer-spin-button {
   font-size: 13px;
   font-weight: 700;
   color: #ff3d3b;
-}
-
-.menu-detail-area {
-  background-color: #fff;
-}
-
-.menu-detail-area .menu-img {
-  position: relative;
-  height: 300px;
-  background-color: #f8fafb;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.03);
-          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.03);
-}
-
-.menu-detail-area .menu-img::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 130px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#000), to(rgba(0, 0, 0, 0)));
-  background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0));
-  z-index: 1;
-  opacity: 0.2;
-}
-
-.menu-detail-area .menu-img::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 65px;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#000), to(rgba(0, 0, 0, 0)));
-  background-image: linear-gradient(to top, #000, rgba(0, 0, 0, 0));
-  z-index: 1;
-  opacity: 0.15;
-}
-
-.menu-detail-area .menu-info-area {
-  padding: 0 18px 20px;
-  margin-top: -20px;
-}
-
-.menu-detail-area .menu-info-area .common-inner {
-  position: relative;
-  padding: 18px;
-  border-radius: 5px;
-  background-color: #fff;
-  -webkit-box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.04);
-          box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.04);
-  z-index: 1;
-}
-
-.menu-detail-area .menu-info-area .menu-info-group {
-  margin-top: 5px;
-}
-
-.menu-detail-area .menu-info-area .menu-info-group .menu-price {
-  line-height: 24px;
-  font-size: 19px;
-  font-weight: 700;
-  color: #ff3d3b;
-}
-
-.menu-detail-area .menu-info-area .menu-info-group .menu-grade::before,
-.menu-detail-area .menu-info-area .menu-info-group .menu-number-of-order::before {
-  content: '';
-  display: inline-block;
-  margin: 0 8px;
-  width: 1px;
-  height: 12px;
-  background-color: #ededed;
-  -webkit-transform: translateY(1px);
-          transform: translateY(1px);
-}
-
-.menu-detail-area .menu-info-area .menu-info-group .menu-grade,
-.menu-detail-area .menu-info-area .menu-info-group .menu-number-of-order {
-  line-height: 24px;
-}
-
-.menu-detail-area .menu-info-area .menu-desc {
-  margin-top: 12px;
-  font-size: 15px;
-  line-height: 22px;
-  color: #333;
-}
-
-.menu-detail-area .order-type-area {
-  margin-top: 20px;
-  padding-top: 20px;
-  border-top: 1px solid #f2f2f2;
-}
-
-.menu-detail-area .order-type-area .type-select,
-.menu-detail-area .order-type-area .type-amount {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.menu-detail-area .order-type-area .type-select .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 15px;
-  font-weight: 700;
-  letter-spacing: -0.3px;
-  color: #333;
-}
-
-.menu-detail-area .order-type-area .type-select .ico-n-logo {
-  margin-right: 4px;
-  width: 20px;
-}
-
-.menu-detail-area .order-type-area .type-select .tab-switch-box {
-  margin-top: 0;
-  border-radius: 3px;
-  overflow: hidden;
-}
-
-.menu-detail-area .order-type-area .type-select .tab-switch {
-  width: 80px;
-  line-height: 37px;
-  font-size: 13px;
-}
-
-.menu-detail-area .order-type-area .type-select .tab-switch.is-active {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  border-radius: 3px;
-}
-
-.menu-detail-area .order-type-area .type-select .tab-switch.is-active::after {
-  display: none;
-}
-
-.menu-detail-area .order-type-area .type-select .tab-switch + .tab-switch {
-  position: relative;
-}
-
-.menu-detail-area .order-type-area .type-select .tab-switch + .tab-switch::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 10px;
-  left: 0;
-  width: 1px;
-  height: 17px;
-  background-color: #e7e7e7;
-}
-
-.menu-detail-area .order-type-area .type-amount {
-  margin-top: 20px;
-}
-
-.menu-detail-area .order-type-area .type-amount .title {
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: -0.3px;
-  color: #333;
-}
-
-.menu-detail-area .order-type-area .btn-order {
-  display: block;
-  margin-top: 20px;
-  padding: 0 16px;
-  width: 100%;
-  line-height: 46px;
-  border-radius: 3px;
-  font-weight: 700;
-  background-color: #01d760;
-  color: #fff;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.menu-detail-area .order-type-area .btn-order:disabled {
-  background-color: #c9c9c9;
-  color: #fff;
 }
 
 .container {
