--- a/assets/scss/abstracts/_mixin_common.scss
+++ b/assets/scss/abstracts/_mixin_common.scss
@@ -13,3 +13,9 @@
     -webkit-line-clamp: $lines;
     -webkit-box-orient: vertical; /* autoprefixer: off */
 }
+
+@mixin common-inner {
+    max-width: 720px;
+    margin-left: auto;
+    margin-right: auto;
+}
