--- a/assets/scss/components/_amount_select.scss
+++ b/assets/scss/components/_amount_select.scss
@@ -13,11 +13,12 @@
         border: 1px solid $booking-color-border109;
         background-color: $booking-color-bg3;
         color: $booking-color-text106;
-        &:enabled {
+        &.enabled {
             border-color: #00d780;
             background-color: #00d780;
             color: #fff;
         }
+        &.disabled,
         &:disabled {
             color: $booking-color-border102;
         }
