--- a/assets/scss/components/detail/_menu_review_area.scss
+++ b/assets/scss/components/detail/_menu_review_area.scss
@@ -1,12 +1,5 @@
 .menu-review-area {
-    .orderer-img-area {
-        padding-bottom: 22px;
-        background-color: #fff;
-        .title {
-            padding: 6px $m-padding 12px;
-        }
-    }
-
+    // 공통
     .title {
         line-height: 22px;
         font-size: 17px;
@@ -19,6 +12,15 @@
         }
     }
 
+    // 주문자 사진
+    .orderer-img-area {
+        padding-bottom: 22px;
+        background-color: #fff;
+        .title {
+            padding: 6px $m-padding 12px;
+        }
+    }
+
     .orderer-pic-list {
         display: flex;
     }
@@ -28,8 +30,6 @@
         & + .orderer-pic-item {
             margin-left: 1px;
         }
-
-
         &:first-child::before,
         &:last-child::after {
             content: '';
@@ -65,14 +65,13 @@
     .review-list {
         border-top: 1px solid $booking-color-border4;
     }
-
+    
     .review-item {
         padding: 16px $m-padding;
         border-bottom: 1px solid $booking-color-border4;
     }
 
     .review-star {
-        position: relative;
         display: flex;
         align-items: center;
         font-size: 15px;
@@ -105,10 +104,10 @@
         line-height: 24px;
         color: $booking-color-text6;
     }
-
+    
     .review-info {
-        font-size: 14px;
         margin-top: 8px;
+        font-size: 14px;
         letter-spacing: -0.4px;
         color: $booking-color-text5;
     }
@@ -134,13 +133,13 @@
         color: $booking-color-text3;
         &::after {
             content: '';
+            margin-left: 6px;
+            margin-bottom: 6px;
             width: 8px;
             height: 8px;
             border-top: 1px solid;
             border-right: 1px solid;
             transform: rotate(135deg);
-            margin-left: 6px;
-            margin-bottom: 6px;
         }
     }
 }
