--- a/assets/scss/components/detail/_option_popup_area.scss
+++ b/assets/scss/components/detail/_option_popup_area.scss
@@ -4,8 +4,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 5000;
     overflow: hidden;
+    z-index: 5000;
 
     .menu-option-popup {
         position: fixed;
@@ -27,8 +27,8 @@
     }
 
     .content-top {
-        background-color: white;
         border-bottom: 1px solid $booking-color-border122;
+        background-color: #fff;
         box-shadow: 0 0 15px 0 rgba(0,0,0,0.08);
         z-index: 1;
 
@@ -80,6 +80,7 @@
                 color: #fff;
             }
         }
+
         .amount-select {
             margin-top: 12px;
         }
@@ -96,7 +97,7 @@
     .content-body {
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
-
+        
         .option-group {
             background-color: #fff;
             & + .option-group {
@@ -120,14 +121,13 @@
                 padding: 0 4px;
                 border-radius: 3px;
                 background-color: $booking-color-bg194;
-                color: #fff;
-                font-size: 13px;
                 line-height: 17px;
+                font-size: 13px;
+                color: #fff;
                 &.required {
                     background-color: $booking-color-bg193;
                 }
             }
-
             .desc {
                 margin-top: 2px;
                 line-height: 24px;
@@ -158,10 +158,10 @@
                 &.checked {
                     font-weight: 700;
                     .price {
+                        font-weight: 600;
                         color: $point-color;
                     }
                 }
-
                 .label-txt {
                     padding-right: 8px;
                 }
@@ -178,7 +178,7 @@
             .input-radio,
             .input-check {
                 &:checked + .label {
-                    font-weight: 600;
+                    font-weight: 700;
                 }
             }
 
@@ -186,7 +186,7 @@
                 & + .label .label-icon {
                     border-radius: 100%;
                 }
-                &:checked +.label .label-icon {
+                &:checked + .label .label-icon {
                     border: 8px solid $green;
                 }
             }
@@ -220,7 +220,7 @@
             }
         }
     }
- 
+
     .content-bottom {
         padding: 0 10px 10px;
         .btn-order {
