--- a/assets/scss/components/menu/_menu_category_area.scss
+++ b/assets/scss/components/menu/_menu_category_area.scss
@@ -6,29 +6,28 @@
     z-index: 5500;
 
     .common-inner {
-        border-bottom: 1px solid $booking-color-border144;
         position: relative;
+        border-bottom: 1px solid $booking-color-border144;
         &::before {
-            position: absolute;
             content: '';
+            position: absolute;
             top: 0;
             left: 0;
             width: $m-padding;
             height: 100%;
+            background-image: linear-gradient(to right, #fff 35%, rgba(255,255,255,0));
             pointer-events: none;
             z-index: 1;
-            background-image: linear-gradient(to right, #fff 25%, rgba(255,255,255,0));
         }
         &::after {
-            position: absolute;
             content: '';
+            position: absolute;
             top: 0;
             right: 0;
             width: $m-padding;
             height: 100%;
+            background-image: linear-gradient(to right, rgba(255,255,255,0), #fff 65%);
             pointer-events: none;
-            z-index: 1;
-            background-image: linear-gradient(to left, #fff, rgba(255,255,255,0));
         }
     }
 
@@ -53,8 +52,8 @@
         padding: 0 12px;
         font-size: 16px;
         height: 30px;
-        color: $booking-color-text6;
         border-radius: 15px;
+        color: $booking-color-text6;
         &.is-active {
             background-color: $booking-color-bg165;
             font-weight: 700;
