--- a/assets/scss/components/menu/_order_box_area.scss
+++ b/assets/scss/components/menu/_order_box_area.scss
@@ -33,6 +33,7 @@
         justify-content: center;
         align-items: center;
         width: 128px;
+        height: 46px;
         border-radius: 5px;
         background-image: linear-gradient(to right, #01d760, #0ad18e);
         font-weight: 700;
@@ -56,11 +57,12 @@
         right: -4px;
         width: 16px;
         height: 16px;
-        background-color: $point-color;
-        color: #fff;
+        line-height: 16px;
         border-radius: 50%;
+        background-color: $point-color;
         font-size: 12px;
         font-weight: 700;
         text-align: center;
+        color: #fff;
     }
 }
