--- a/assets/scss/components/menu/_recent_order_area.scss
+++ b/assets/scss/components/menu/_recent_order_area.scss
@@ -1,16 +1,16 @@
 .recent-order-area {
     display: flex;
     margin-top: 16px;
-    padding: 10px 0;
+    padding: 18px 0;
     border-radius: 2px;
     background-color: #fff;
 
     .recent-title {
         display: flex;
         flex-direction: column;
-        flex-shrink: 0;
         justify-content: center;
         align-items: center;
+        flex-shrink: 0;
         padding: 8px;
         border-right: 1px solid $booking-color-bg102;
         line-height: 1.42;
@@ -30,25 +30,23 @@
     .recent-menu-item {
         box-sizing: content-box;
         position: relative;
-        padding-left: 16px;
+        padding-right: 16px;
         width: 80px;
         text-align: center;
-        padding-right: 16px;
         &.is-ordered {
             padding-left: 16px;
             border-right: 1px solid $booking-color-bg102;
-
-            & +.recent-menu-item {
+            & + .recent-menu-item {
                 padding-left: 16px;
             }
         }
     }
 
-    .menu-image-area {
+    .menu-img-area {
         position: relative;
         width: 80px;
         height: 80px;
-        border: 1px solid $booking-color-border149;
+        border: 1px solid $booking-color-border149; 
         border-radius: 100%;
         background-color: rgba(0,0,0,0.01);
     }
@@ -60,10 +58,10 @@
         padding: 0 5px;
         border-radius: 10px;
         line-height: 16px;
+        font-size: 11px;
         font-weight: 700;
         background-color: #ff61a7;
         color: #fff;
-        font-size: 11px;
     }
 
     .menu-img {
@@ -76,11 +74,11 @@
         position: absolute;
         top: 50px;
         right: 16px;
+        display: flex;
         padding: 6px;
         border: 1px solid $booking-color-border150;
         border-radius: 100%;
-        display: flex;
-        background-color: $booking-color-bg8;
+        background-color: $booking-color-bg18;
     }
 
     .ico-cart {
@@ -99,5 +97,6 @@
         font-size: 13px;
         font-weight: 700;
         color: $point-color;
+        @include ellipsis;
     }
 }
